--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Hello React!</title>
+    <title>Connlib Test Suite</title>
 </head>
 
 <body>
@@ -73,11 +73,13 @@
         width: 100%;
         background-color: white;
         position: absolute;
+        z-index: 0;
     }
 
     .connlib-element {
         position: absolute;
         background-color: rgb(255, 215, 215);
         border-radius: 3px;
+        z-index: 1;
     }
 </style>
