--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
         position: absolute;
         z-index: 0;
     }
+    .connlib-endpoint {
+        z-index: 2;
+        background-color: #0000006e;
+    }
 
     .connlib-element {
         position: absolute;
