--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
     }
     .connlib-endpoint {
         z-index: 2;
-        background-color: #0000006e;
+    }
+
+    .connlib-port {
+        stroke: black;
+        stroke-width: 1;
+        fill: white;
     }
 
     .connlib-element {
