--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
     .connlib-line-overlay.vertical {
         cursor: ew-resize;
     }
+
+    .connlib-line-overlay.target-connected {
+        stroke: rgba(135, 206, 250, 0.483);
+    }
     .connlib-pathpoint-overlay {
         fill: rgba(255, 255, 255, 0);
     }
