--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
     body {
         margin: 0px;
         padding: 0px;
-        background-color: rgb(245, 245, 245);
         overflow: hidden;
+        margin: 0px;
+        padding: 0px;
+        background-color: rgb(255, 255, 255);
+        overflow: hidden;
+        background-size: 20px 20px;
+        background-image: linear-gradient(to right, #eeeeee 1px, transparent 1px), linear-gradient(to bottom, #eeeeee 1px, transparent 1px);
     }
 
     #scene {
@@ -69,12 +74,10 @@
     }
 
     .connlib-instance {
-        height: 100%;
-        width: 100%;
-        background-color: white;
         position: absolute;
         z-index: 0;
     }
+
     .connlib-endpoint {
         z-index: 2;
     }
@@ -113,9 +116,11 @@
     .connlib-line-overlay.target-connected {
         stroke: rgba(135, 206, 250, 0.483);
     }
+
     .connlib-pathpoint-overlay {
         fill: rgba(255, 255, 255, 0);
     }
+
     .connlib-pathpoint-overlay:hover {
         cursor: all-scroll;
         z-index: 3;
