--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <div id="root"></div>
 
+    <input type="file" id="upload-input" style="display: none;" accept="application/JSON" />
+
     <!-- Dependencies -->
     <script src="./node_modules/react/umd/react.development.js"></script>
     <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
@@ -105,11 +107,13 @@
         stroke: rgba(255, 0, 0, 0.489);
     }
 
-    .connlib-line-overlay.horizontal {
+    .connlib-line-overlay.horizontal,
+    .connlib-endpoint.horizontal {
         cursor: ns-resize;
     }
 
-    .connlib-line-overlay.vertical {
+    .connlib-line-overlay.vertical,
+    .connlib-endpoint.vertical {
         cursor: ew-resize;
     }
 
@@ -125,5 +129,28 @@
         cursor: all-scroll;
         z-index: 3;
         fill: rgba(0, 0, 255, 0.625);
+    }
+
+    .event-outer {
+        border-radius: 50%;
+        background-color: white;
+        overflow: hidden;
+        border: 2px solid;
+        display: flex;
+        align-items: center;
+        color: #343434;
+    }
+
+    .event-outer>.icon {
+        height: 30px;
+        width: 30px;
+    }
+
+    .event-outer>.spacer {
+        flex: 1;
+    }
+
+    .structural-type {
+        border: 1px solid #343434;
     }
 </style>
