--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
         border-radius: 50%;
         background-color: white;
         overflow: hidden;
-        border: 2px solid;
         display: flex;
         align-items: center;
         color: #343434;
+        border-style: solid;
     }
 
     .event-outer>.icon {
