--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
     }
 
     .structural-type {
-        border: 1px solid #343434;
+        border-style: solid;
+        border-color: #343434;
     }
 </style>
