--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
         align-items: center;
         color: #343434;
         border-style: solid;
+        z-index: 1;
     }
 
     .event-outer>.icon {
@@ -153,5 +154,6 @@
     .structural-type {
         border-style: solid;
         border-color: #343434;
+        z-index: 1;
     }
 </style>
