--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     }
 
     .connlib-line-overlay.target-connected {
-        stroke: rgba(135, 206, 250, 0.483);
+        /*stroke: rgba(135, 206, 250, 0.483);*/
     }
 
     .connlib-pathpoint-overlay {
