--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <input type="file" id="upload-input" style="display: none;" accept="application/JSON" />
 
     <!-- Dependencies -->
-    <script src="./node_modules/react/umd/react.development.js"></script>
-    <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
+    <script src="./lib/react.development.js"></script>
+    <script src="./lib/react-dom.development.js"></script>
 
     <!-- Main -->
     <script src="./dist/connlib.js"></script>
